--- a/student.env
+++ b/student.env
@@ -1,2 +1,2 @@
-STUDENT_NAME=JUAN PÉREZ
-STUDENT_EMAIL=jperez@est.ups.edu.ec
+STUDENT_NAME=Wellington Guzmán
+STUDENT_EMAIL=wguzmang1@est.ups.edu.ec
